--- a/app/app_core/templates/contactus.html
+++ b/app/app_core/templates/contactus.html
@@ -1,29 +1,126 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Contact Us</title>
-	</head>
-	<body style="background-color:#CCE6FF"/>
-		<center>
-			<h1>Knowledge Sharing Campaign</h1>
-			<img src="https://avatars2.githubusercontent.com/u/12671253?v=3&s=200"/>
-		<div header>
-				<table border="1" width="100%" id="Table1">
-					<tr font-size="14" align="center">
-						<td><a href="/">Home</a></td>
-						<td><a href="aboutus">About Us</a></td>
-						<td><a href="gallery">Gallery</a></td>
-						<td><a href="events">Events</a></td>
-					</tr>
-				</table>
-		</div>
-			<h3>Contacts</h3>
-			
-			<h4><a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/">Facebook</a></h4>
-			<h4><a href="https://github.com/knowledge-sharing-campaign/site">Website</a></h4>
 
-			<h4><a href="https://twitter.com/">Twitter</a></h4>
-			<h4>Office Address: Apurupa Slipi Sy No 124 Part,    <br>3rd floor Gachilbowli Village Above KFC Serilingampally<br> Mandal RR Dist - Hyd - 500032, Gachibowli Road, <br>Rajiv gandhi Nagar, Gachibowli, <br>Hyderabad, Telangana 500032</h4>
-		</center>		
-	</body>
+<head>
+    <title>KSC</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="/static/slippry/dist/slippry.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <link rel="stylesheet" href="/static/css/home_style.css">
+    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
+    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
+    <script src="/static/sliderengine/jquery.js"></script>
+    <script src="/static/sliderengine/amazingslider.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/sliderengine/amazingslider-1.css">
+    <script src="/static/sliderengine/initslider-1.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/css/contacts.css">
+</head>
+<header>
+    <div id="langbar" align="right">
+        <select>
+            <option>Language</option>
+            <option value="English">English</option>
+            <option value="French">French</option>
+        </select>
+    </div>
+    <div id="menu" class="clear">
+        <a href="/">
+            <div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div>
+        </a>
+        <ul align="center" id="bar">
+            <li><a href="/aboutus">About Us</a></li>
+            <li><a href="/gallery">Gallery</a></li>
+            <li><a href="/forum">Forum</a></li>
+            <li><a href="/upcomingevents">Events</a></li>
+            <li><a href="/login">Login</a></li>
+            <li><a href="/register">Registration</a></li>
+        </ul>
+    </div>
+</header>
+</div>
+
+<body>
+    <h1>CONTACT US:</h1>
+<div>
+<form id="contactform" name="contactform" method="post" action="">
+  <p>
+    <label>FullName :
+      <input type="text" name="Name" id="Name" />
+    </label>
+  </p>
+  <p>
+    <label>Phone Number :
+      <input type="text" name="Phone number" id="Phone number" />
+    </label>
+  </p>
+  <p>
+    <label>Email Id :
+      <input type="text" name="email" id="email" />
+    </label>
+  </p>
+  <p>
+    <label>Address :
+      <input type="text" name="address" id="address" />
+    </label>
+  </p>
+  <p>
+    <label>Enquiry :
+      <textarea align="left" name="Enquiry" id="Enquiry" cols="30" rows="5"></textarea>
+    </label>
+  </p>
+  <p>
+    <input type="submit" name="Send" id="Send" value="Submit" />
+  </p>
+</form></div>
+<p>
+<h2>Email:</h2> <address> <a href="mailto:charles.mberikimpolo@gmail.com" target="_blank"> </address> knowledgesharingcampaign@gmail.com
+<h2>Office Address:</h2> 
+ThoughtWorks Technologies (India) Pvt Ltd. 3rd Floor, Apurupa Silpi, Beside H.P. Petrol Bunk (KFC Building), Gachibowli, Hyderabad - 500032, India
+
+<h2>Telephone:</h2>
+ 04012345679
+
+<h2>Fax:</h2> 04012456787</p>
+</body>
+    <footer align="center">
+        <ls>
+            <div align="right">
+                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
+                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
+                </a>
+                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
+                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
+                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
+                </a>
+            </div>
+            <div align="justify">
+                <ls>
+                    <a id="contactus" href="/contactus">
+                        <font size="3"><b> Contact Us </b></font>
+                    </a>
+                   
+                </ls>&nbsp;
+                <ls>
+                    <a id="partners" href="/partners">
+                        <font size="3"><b>| Our Partners  </b></font>
+                    </a>
+                    
+                </ls>&nbsp;
+                <ls>
+                    <a id="termscons" href="/termscons">
+                        <font size="3"><b>| Terms&Conditions </font></a>
+                    
+              </ls>&nbsp;
+                <ls>
+                    <a id="privacy" href="/privacy">
+                        <font size="3"><b>| Privacy Policy </font></a>
+                </ls>&nbsp;
+                    &nbsp;
+        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
+        </div>
+    </footer>
+
 </html>
