--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -96,6 +96,8 @@
         </div>
     </div>
     </div>
+    <p>&nbsp;</p>
+    </body>
     <footer align="center">
         <ls>
             <div align="right">
@@ -109,64 +111,28 @@
             </div>
             <div align="justify">
                 <ls>
-                    <a id="contactus" href="javascript:;">
+                    <a id="contactus" href="/contactus">
                         <font size="3"><b> Contact Us </b></font>
                     </a>
-                    <script>
-                    $("#partners").click(function() {
-                        $.fancybox.open({
-                        href: '/static/htmls/contacts.html',
-                        type: 'iframe',
-                        padding: 2
-                        });
-                        });
-                    </script>
+                   
                 </ls>&nbsp;
                 <ls>
-                    <a id="partners" href="javascript:;">
+                    <a id="partners" href="/partners">
                         <font size="3"><b>| Our Partners  </b></font>
                     </a>
-                    <script>
-                    $("#partners").click(function() {
-                        $.fancybox.open({
-                        href: '/static/htmls/partners.html',
-                        type: 'iframe',
-                        padding: 2
-                        });
-                        });
-                    </script>
+                    
                 </ls>&nbsp;
                 <ls>
-                    <a id="termscons" href="javascript:;">
-                        <font size="3"><b>| Terms&Conditions </font></b></a>
-                    <script>
-                    $("#termscons").click(function() {
-                        $.fancybox.open({
-                        href: '/static/htmls/termscons.html',
-                        type: 'iframe',
-                        padding: 2
-                        });
-                        });
-                    </script>
-                </ls>&nbsp;
+                    <a id="termscons" href="/termscons">
+                        <font size="3"><b>| Terms&Conditions </font></a>
+                    
+              </ls>&nbsp;
                 <ls>
-                    <a id="privacy" href="javascript:;">
-                    <font size="3"><b>| Privacy Policy  </font></b></a>
+                    <a id="privacy" href="/privacy">
+                        <font size="3"><b>| Privacy Policy </font></a>
                 </ls>&nbsp;
-                    <script>
-                    $("#privacy").click(function() {
-                    $.fancybox.open({
-                    href: '/static/htmls/privacy.html',
-                    type: 'iframe',
-                    padding: 2
-                    });
-                    });
-            </script>
-        </ls>&nbsp;
-        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></b>
-        </ls>
+                    &nbsp;
+        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
         </div>
     </footer>
-</body>
-
 </html>
