--- a/app/app_core/templates/partners.html
+++ b/app/app_core/templates/partners.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css"  href='../../static/css/login.css'/>
-
-	<title>FORGOT PASSWORD</title>
-</head>
-<head>
+    <head>
     <title>KSC</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
@@ -44,16 +39,18 @@
     </div>
 </header>
 </div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 <body>
-<div>
-<P>ENTER YOUR EMAIL ADDRESS AND WE WILL <br>SEND YOU A LINK TO RESET YOUR PASSWORD</br></P>
-<p>
-    <input type="text" name="username" id="username" placeholder="*EMAIL ADDRESS" required autofocus>
-  </p>
-    <p><button>Reset</button><a href="login.html"><button>Cancel</button></p>
-</p></div>
-</body>
-<footer align="center">
+    <h1>Partners</h1>
+    <a href="https://www.thoughtworks.com/" target="_blank"><img alt="Go to ThoughtWorks page" border="1" height="200" src="/static/images/tw.png" width="600"></a>
+    <a href="http://swecha.org/" target="_blank"><img alt="Go to swecha page" border="1" height="200" src="/static/images/swecha.jpeg" width="600"></a>
+    <a href="http://asa-telangana.org/" target="_blank"><img alt="Go to asa page" border="1" height="200" src="/static/images/asa.jpeg" width="600"></a>
+    </body>
+    <footer align="center">
         <ls>
             <div align="right">
                 <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
@@ -90,4 +87,5 @@
         <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
         </div>
     </footer>
+
 </html>
