--- a/app/app_core/templates/gallery.html
+++ b/app/app_core/templates/gallery.html
@@ -1,30 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>KSC GALLERY</title>
+    <title>KSC</title>
     <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="/static/slippry/dist/slippry.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-<link rel="stylesheet" href="/static/css/home_style.css">
-
-<link rel="stylesheet" href="/static/slippry/dist/slippry.css">
-<link rel="stylesheet" href="/static/css/home.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
-
-   
-    <script src="/static/galleryengine/jquery.js"></script>
-    <script src="/static/galleryengine/amazingslider.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/galleryengine/amazingslider-1.css">
-    <script src="/static/galleryengine/initslider-1.js"></script>
-   
-    
+    <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="/static/slippry/dist/slippry.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <link rel="stylesheet" href="/static/css/home_style.css">
+    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
+    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
+    <script src="/static/sliderengine/jquery.js"></script>
+    <script src="/static/sliderengine/amazingslider.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/sliderengine/amazingslider-1.css">
+    <script src="/static/sliderengine/initslider-1.js"></script>
 </head>
 <header>
-
     <div id="langbar" align="right">
         <select>
             <option>Language</option>
@@ -32,43 +24,26 @@
             <option value="French">French</option>
         </select>
     </div>
-
-
-
     <div id="menu" class="clear">
-
-
-
-        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
-
-<!--  <div class="box">
-  <div class="container-4">
-    <input type="search" id="search" placeholder="Search..." />
-    <button class="icon"><i class="fa fa-search"></i></button>
-  </div>
-</div>
- -->
+        <a href="/">
+            <div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div>
+        </a>
         <ul align="center" id="bar">
             <li><a href="/aboutus">About Us</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/forum">Forum</a></li>
-            <li><a href="/events">Events</a></li>
+            <li><a href="/upcomingevents">Events</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Registration</a></li>
         </ul>
-
     </div>
-
-
-    
 </header>
-
-    </div>
+</div>
 <body>
     <div id="amazingslider-wrapper-1" style="display:block;position:relative;max-width:900px;margin:0px auto 102px;">
         <div id="amazingslider-1" style="display:block;position:relative;margin:0 auto;">
             <ul class="amazingslider-thumbnails" style="display:none;">
-                <li><img src="/static/galleryimages/1-tn.jpg" alt="STUDENTS" title="STUDENTS" /></li>
+                <li><img src="" alt="STUDENTS" title="STUDENTS" /></li>
                 <li><img src="/static/galleryimages/2-tn.jpg" alt="TRAINER TEAM" title="TRAINER TEAM" /></li>
                 <li><img src="/static/galleryimages/3-tn.jpg" alt="DEV. + UI/UX" title="DEV. + UI/UX" /></li>
                 <li><img src="/static/galleryimages/4-tn.jpg" alt="SESSION" title="SESSION" /></li>
@@ -78,59 +53,46 @@
             </ul>
         </div>
     </div>
-    
-    <footer align="center">
-<div align="right">
-<ls>             
-<a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
-</a>
-<a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
-<a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-</a></div>
-<div align="justify">
-  <ls><a id="contact-us" href="javascript:;"><font size="4" font color="grey"> Contact Us </font></a>
-<script>
-                $("#contact-us").click(function() {
-                $.fancybox.open({
-                href: '/static/htmls/contacts.html',
-                type: 'iframe',
-                padding: 2
-                });
-                });
-                </script></ls>&nbsp;
-<ls><a id="partners" href="javascript:;"><font size="4" font color="grey">| Our Partners  </font></a>
-  <script>
-                $("#partners").click(function() {
-                $.fancybox.open({
-                href: '/static/htmls/partners.html',
-                type: 'iframe',
-                padding: 2
-                });
-                });
-                </script></ls>&nbsp;
-<ls><a id="termscons" href="javascript:;"><font size="4" font color="grey">| Terms&Conditions </font></a>
-<script>
-                $("#termscons").click(function() {
-                $.fancybox.open({
-                href: '/static/htmls/termscons.html',
-                type: 'iframe',
-                padding: 2
-                });
-                });
-</script></ls>&nbsp;
-<ls><a id="privacy" href="javascript:;"><font size="4" font color="grey">| Privacy Policy  </font></a>
-<script>
-$("#privacy").click(function() {
-$.fancybox.open({
-href: '/static/htmls/privacy.html',
-type: 'iframe',
-padding: 2
-});
-});
-</script></ls>&nbsp;
-<ls><a href="#">| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls></div>
-</footer>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
+   <p>&nbsp;</p>
 </body>
+<footer align="center">
+        <ls>
+            <div align="right">
+                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
+                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
+                </a>
+                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
+                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
+                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
+                </a>
+            </div>
+            <div align="justify">
+                <ls>
+                    <a id="contactus" href="/contactus">
+                        <font size="3"><b> Contact Us </b></font>
+                    </a>
+                   
+                </ls>&nbsp;
+                <ls>
+                    <a id="partners" href="/partners">
+                        <font size="3"><b>| Our Partners  </b></font>
+                    </a>
+                    
+                </ls>&nbsp;
+                <ls>
+                    <a id="termscons" href="/termscons">
+                        <font size="3"><b>| Terms&Conditions </font></a>
+                    
+              </ls>&nbsp;
+                <ls>
+                    <a id="privacy" href="/privacy">
+                        <font size="3"><b>| Privacy Policy </font></a>
+                </ls>&nbsp;
+                    &nbsp;
+        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
+        </div>
+    </footer>
 </html>
