--- a/app/app_core/templates/slider.html
+++ b/app/app_core/templates/slider.html
@@ -11,7 +11,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
 	<link rel="stylesheet" href="/static/css/home_style.css">
 
-<link rel="stylesheet" href="/static/slippry/dist/slippry.css">
+<link rel="stylesheet" href="gallery.html">
 <link rel="stylesheet" href="/static/css/home.css" type="text/css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
     
@@ -38,7 +38,7 @@
 
 
 
-        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
+        <a href="gallery.html"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
 
  <div class="box">
   <div class="container-4">
@@ -49,10 +49,10 @@
 
         <ul align="center" id="bar">
             <li><a href="/aboutus">About Us</a></li>
-            <li><a href="/gallery">Gallery</a></li>
-            <li><a href="/forum">Forum</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="gallery.html">Forum</a></li>
             <li><a href="/events">Events</a></li>
-            <li><a href="/login">Login</a></li>
+            <li><a href="gallery.html">Login</a></li>
             <li><a href="/register">Registration</a></li>
         </ul>
 
@@ -141,95 +141,42 @@ The fun is in making the connections.<br><strong>Arthur Aufderheide</strong>
       </div>
     </div>
   </div>
+  </body>
 <footer align="center">
-  <hr>
-  <div class="row">
-    <div class="text-center col-md-6 col-md-offset-3">
-      <h4> </h4>
-      <div>
-
-        <p>
-       
-    </div>
-
-<div id="patcont">
-
-<a id="contact-us" href="javascript:;"><font size="3" font color="black">Contact Us | <a id="partners" href="javascript:;">Partners </font></a>
-
-</a> 
-
-</div>
-
-<div id="socialmedia" align="right">
-
-
-<script>
-            $("#contact-us").click(function() {
-                $.fancybox.open({
-                    href: '/static/htmls/contacts.html',
-                    type: 'iframe',
-                    padding: 2
-                });
-                });
-                </script>
-
-                <script>
-$("#partners").click(function() {
-$.fancybox.open({
-href: '/static/htmls/partners.html',
-type: 'iframe',
-padding: 2
-});
-});
-</script>
-
-<a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
-</a>
-<a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
-<a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-</a>
-
-</div>
-            
-
-
-<li><a id="termscons" href="javascript:;"> <font size="0.5" > &nbsp;&nbsp;Terms&Conditions |</font></a></li>
-<script>
-$("#termscons").click(function() {
-$.fancybox.open({
-href: '/static/htmls/termscons.html',
-type: 'iframe',
-padding: 2
-});
-});
-</script>
-<li><a id="privacy" href="javascript:;"><font size="0.5"> Privacy Policy </font></a></li>
-<script>
-$("#privacy").click(function() {
-$.fancybox.open({
-href: '/static/htmls/privacy.html',
-type: 'iframe',
-padding: 5
-});
-});
-</script>
-      <div id="cpy">
-      <p>Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </p>
-      </div>
-    </div>
-  </div>
-  <hr>
-</div>
-
-
-
-
-
-</footer>
-
-
-    
-</body>
+        <ls>
+            <div align="right">
+                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
+                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
+                </a>
+                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
+                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
+                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
+                </a>
+            </div>
+            <div align="justify">
+                <ls>
+                    <a id="contactus" href="/contactus">
+                        <font size="3"><b> Contact Us </b></font>
+                    </a>
+                   
+                </ls>&nbsp;
+                <ls>
+                    <a id="partners" href="/partners">
+                        <font size="3"><b>| Our Partners  </b></font>
+                    </a>
+                    
+                </ls>&nbsp;
+                <ls>
+                    <a id="termscons" href="/termscons">
+                        <font size="3"><b>| Terms&Conditions </font></a>
+                    
+              </ls>&nbsp;
+                <ls>
+                    <a id="privacy" href="/privacy">
+                        <font size="3"><b>| Privacy Policy </font></a>
+                </ls>&nbsp;
+                    &nbsp;
+        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
+        </div>
+    </footer>
 </html>
