ALvares, Juma | linking reset to forgotpassord and sign up to registration on login

--- a/app/app_core/templates/login.html
+++ b/app/app_core/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Login Form</title>
-    
+
     
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
@@ -75,8 +75,8 @@
   
   <div id="dont_have_an_account">
     <h2>
-      Need to <a href="#" class="login_link">sign up</a> for an account
-      or <a href="#" id="forgot_password_link" class="login_link">reset</a> your password?
+      Need to <a href="/register" class="login_link">sign up</a> for an account
+      or <a href="/reset" id="forgot_password_link" class="login_link">reset</a> your password?
     </h2>
   </div>
 </div>
