--- a/app/app_core/templates/gallery.html
+++ b/app/app_core/templates/gallery.html
@@ -59,6 +59,9 @@
    <p>&nbsp;</p>
 </body>
 <footer align="center">
+    <div id="wrap">
+    <div id="right">
+    <ul>
         <ls>
             <div align="right">
                 <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
@@ -68,9 +71,9 @@
                 <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
                     <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
                 </a>
-            </div>
-            <div align="justify">
-                <ls>
+    </div>
+    <div id="main" align="left">
+    <ls>
                     <a id="contactus" href="/contactus">
                         <font size="3"><b> Contact Us </b></font>
                     </a>
@@ -92,7 +95,8 @@
                         <font size="3"><b>| Privacy Policy </font></a>
                 </ls>&nbsp;
                     &nbsp;
-        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-        </div>
+    <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
+            </div>
+            </div>
     </footer>
 </html>
