--- a/app/app_core/templates/partners.html
+++ b/app/app_core/templates/partners.html
@@ -39,11 +39,6 @@
     </div>
 </header>
 </div>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
 <body>
     <h1>Partners</h1>
     <a href="https://www.thoughtworks.com/" target="_blank"><img alt="Go to ThoughtWorks page" border="1" height="200" src="/static/images/tw.png" width="600"></a>
@@ -51,6 +46,9 @@
     <a href="http://asa-telangana.org/" target="_blank"><img alt="Go to asa page" border="1" height="200" src="/static/images/asa.jpeg" width="600"></a>
     </body>
     <footer align="center">
+    <div id="wrap">
+    <div id="right">
+    <ul>
         <ls>
             <div align="right">
                 <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
@@ -60,9 +58,9 @@
                 <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
                     <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
                 </a>
-            </div>
-            <div align="justify">
-                <ls>
+    </div>
+    <div id="main" align="left">
+    <ls>
                     <a id="contactus" href="/contactus">
                         <font size="3"><b> Contact Us </b></font>
                     </a>
@@ -84,8 +82,9 @@
                         <font size="3"><b>| Privacy Policy </font></a>
                 </ls>&nbsp;
                     &nbsp;
-        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-        </div>
+    <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
+            </div>
+            </div>
     </footer>
 
 </html>
