--- a/app/app_core/templates/registration.html
+++ b/app/app_core/templates/registration.html
@@ -420,6 +420,9 @@ var sprypassword1 = new Spry.Widget.ValidationPassword("sprypassword1");
     </div>
 </body>
 <footer align="center">
+    <div id="wrap">
+    <div id="right">
+    <ul>
         <ls>
             <div align="right">
                 <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
@@ -429,9 +432,9 @@ var sprypassword1 = new Spry.Widget.ValidationPassword("sprypassword1");
                 <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
                     <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
                 </a>
-            </div>
-            <div align="justify">
-                <ls>
+    </div>
+    <div id="main" align="left">
+    <ls>
                     <a id="contactus" href="/contactus">
                         <font size="3"><b> Contact Us </b></font>
                     </a>
@@ -453,7 +456,8 @@ var sprypassword1 = new Spry.Widget.ValidationPassword("sprypassword1");
                         <font size="3"><b>| Privacy Policy </font></a>
                 </ls>&nbsp;
                     &nbsp;
-        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-        </div>
+    <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
+            </div>
+            </div>
     </footer>
 </html>
