--- a/app/app_core/templates/partners.html
+++ b/app/app_core/templates/partners.html
@@ -32,7 +32,7 @@
             <li><a href="/aboutus">About Us</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/forum">Forum</a></li>
-            <li><a href="/upcomingevents">Events</a></li>
+            <li><a href="/events">Events</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Registration</a></li>
         </ul>
