--- a/app/app_core/templates/aboutus.html
+++ b/app/app_core/templates/aboutus.html
@@ -29,10 +29,9 @@
             <div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div>
         </a>
         <ul align="center" id="bar">
-            <li><a href="/aboutus">About Us</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/forum">Forum</a></li>
-            <li><a href="/upcomingevents">Events</a></li>
+            <li><a href="/events">Events</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/register">Registration</a></li>
         </ul>
