--- a/app/static/css/home_style.css
+++ b/app/static/css/home_style.css
@@ -222,13 +222,15 @@ footer{
     background: white;
   }
 footer{}
-  #wrap {min-height: 100%;}
+  #wrap {
+  min-height: 100%;
+  }
 
 #main {overflow:auto;
   padding-bottom: 150px;}  /* must be same height as the footer */
 
 #footer {position: relative;
-  margin-top: -150px; /* negative value of footer height */
+  margin-top: -150px;  negative value of footer height 
   height: 150px;
   clear:both;} 
 
